# Agents

ConsensusEngine/: README.md  pyproject.toml
ConsensusEngine/consensus_engine/: __init__.py  agents.py  cli.py  critics.py  engine.py  models.py  trust.py
ConsensusEngine/examples/: market_snapshot.json
ConsensusEngine/tests/: test_consensus_engine.py
Critic/: README.md  requirements.txt
DirectionalConsensusB/: directional_consensus_agent_b.py  directional_consensus_agent_b_README.md
DirectionalconsensusA/: README.md  pyproject.toml  run_agent.py
DirectionalconsensusA/data/: sample_market_snapshot.json
DirectionalconsensusA/src/directional_consensus_a/: __init__.py  agent.py  cli.py  models.py
DirectionalconsensusA/tests/: test_consensus_agent.py
FundamentalAnalyst/: README-fundamental-analyst-agent.md  company-financials-template.json  fundamental-analyst-agent.md  fundamental-analyst-agent.schema.json  fundamental_analyst_agent.py  sample-analysis-report.html  sample-analysis-report.md  sample-analysis-result.json  sample-company-financials.json
GeopoliticalAnalyst/: README.md  pyproject.toml
GeopoliticalAnalyst/examples/: sample_signal.json
GeopoliticalAnalyst/src/geopolitical_analyst/: __init__.py  agent.py  calibration.py  cli.py  models.py  scoring.py
GeopoliticalAnalyst/tests/: test_agent.py
Government_policy_analyst-main/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
MacroCritic/: README.md
Macroeconomist/: macroeconomist_agent.py  macroeconomist_agent_README.md
ProfitCritic/: profit_critic_agent.py  (+1 more)
(+110 files in other folders)
