[project]
name = "consensus-engine"
version = "0.1.0"
description = "Directional confidence consensus engine for multi-agent investment decisions."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
consensus-engine = "consensus_engine.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
